# fuzzy_lang_search

./: Cargo.toml  README.md  index.html  package-lock.json  package.json  senor_borroso.js  senor_borroso_bg.wasm
src/: ftzrs.rs  fuzzyindex.rs  fuzzypoint.rs  lang_info.rs  lib.rs  main.rs  utils.rs
