[package]
name = "senor_borroso"
version = "0.1.0"
authors = ["J. Logan Dimond"]
edition = "2018"
license = "MPL-2.0"
description = "Fuzzy (approximate) search for NLP tasks in any language"
repository = "https://github.com/Lambda-Logan/senor_borroso"
exclude = ["under_construction.rs", ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib"]

[dependencies]
unidecode = "0.3.0"
fxhash = "0.2.1"
space = "0.12.0"
wasm-bindgen = "0.2"
lazy_static = "1.4.0"
serde_json = "1.0.59"
creature_feature = { path = "/home/logan/Dropbox/USUABLE/creature_feature/" }